# RoomRadar_CLI

./: .gitignore  bun.lockb  diddy.txt  package-lock.json  package.json
roomradar_ap/: .gitignore  CMakeLists.txt
roomradar_ap/include/: types.hh
roomradar_ap/src/: help.cc  main.cc  room.cc  room_data.csv
roomradar_cpp/include/arr_methods/: arr_methods.hh  splice_remove.cc
roomradar_cpp/include/table/: table.cpp  table.hh
roomradar_cpp/include/types/: room.hh
roomradar_cpp/src/: help.cpp  main.cpp  main.hh  roomradar.cc
roomradar_cpp/table/: table.cpp  table.h
src/data/: cookie.json  parse.js  room_data.json
src/roomradar/: cli.js  handlesearchquery.js  location.js  parse.js  postinstall.js  radar.js  scrape.js  update_data.js
